--- a/client/src/pages/DashboardPage.css
+++ b/client/src/pages/DashboardPage.css
@@ -198,8 +198,19 @@
   }
 }
 
-.react-resizable-handle {
-  display: none !important;
+.react-grid-item > .react-resizable-handle.react-resizable-handle-s {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 12px;
+  margin-left: 0;
+  padding: 0;
+  transform: none;
+  opacity: 0;
+  background-image: none;
+  cursor: ns-resize;
+  z-index: 3;
 }
 
 .goal-label {
